--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -10,7 +10,7 @@
 
 - name: DTS CFT AKS version checker
   subjects:
-    - 'repo:hmcts/aks-cft-deploy:ref:refs/heads/master'
+    - 'repo:hmcts/aks-cft-deploy:ref:refs/heads/main'
     - 'repo:hmcts/aks-cft-deploy:pull_request'
   permissions:
     - role_definition_name: Reader
