--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -3,8 +3,9 @@
   subjects:
     - 'repo:hmcts/aks-sds-deploy:ref:refs/heads/master'
     - 'repo:hmcts/aks-sds-deploy:pull_request'
-
+  permissions: []
 - name: DTS CFT AKS version checker
   subjects:
     - 'repo:hmcts/aks-cft-deploy:ref:refs/heads/main'
     - 'repo:hmcts/aks-cft-deploy:pull_request'
+  permissions: []
