--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -9,13 +9,8 @@
     - 'repo:hmcts/aks-cft-deploy:ref:refs/heads/main'
     - 'repo:hmcts/aks-cft-deploy:pull_request'
   permissions: []
-- name: DTS SDS AKS Auto-Shutdown
+- name: DTS AKS Auto-Shutdown
   subjects:
-    - 'repo:hmcts/aks-sds-deploy:ref:refs/heads/master'
-    - 'repo:hmcts/aks-sds-deploy:pull_request'
-  permissions: []
-- name: DTS CFT AKS Auto-Shutdown
-  subjects:
-    - 'repo:hmcts/aks-cft-deploy:ref:refs/heads/main'
-    - 'repo:hmcts/aks-cft-deploy:pull_request'
+    - 'repo:hmcts/aks-auto-shutdown:ref:refs/heads/master'
+    - 'repo:hmcts/aks-auto-shutdown:pull_request'
   permissions: []
