--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -15,6 +15,8 @@
     - 'repo:hmcts/aks-auto-shutdown:pull_request'
     - 'repo:hmcts/aks-auto-shutdown-1:ref:refs/heads/master'
     - 'repo:hmcts/aks-auto-shutdown-1:pull_request'
+    - 'repo:hmcts/aks-auto-shutdown-releases:ref:refs/heads/master'
+    - 'repo:hmcts/aks-auto-shutdown-releases:pull_request'
   permissions: []
 - name: Sandbox Cleanup
   subjects:
