adjusting federated credential following repo rename

--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -11,8 +11,8 @@
   permissions: []
 - name: DTS AKS Auto-Shutdown
   subjects:
-    - 'repo:hmcts/aks-auto-shutdown:ref:refs/heads/master'
-    - 'repo:hmcts/aks-auto-shutdown:pull_request'
+    - 'repo:hmcts/auto-shutdown:ref:refs/heads/master'
+    - 'repo:hmcts/auto-shutdown:pull_request'
     - 'repo:hmcts/aks-auto-shutdown-1:ref:refs/heads/master'
     - 'repo:hmcts/aks-auto-shutdown-1:pull_request'
     - 'repo:hmcts/aks-auto-shutdown-releases:ref:refs/heads/master'
