add scope to orphaned resource cleanup for KV containg slack webhook

--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -76,3 +76,4 @@
     - role_definition_name: Orphan Resource Cleanup Read/Delete
       scopes:
         - /providers/Microsoft.Management/managementGroups/CFT-Sandbox
+        - /subscriptions/1baf5470-1c3e-40d3-a6f7-74bfbce4b348/resourceGroups/core-infra-intsvc-rg/providers/Microsoft.KeyVault/vaults/cftptl-intsvc
