--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -76,3 +76,4 @@
     - role_definition_name: Orphan Resource Cleanup Read/Delete
       scopes:
         - /providers/Microsoft.Management/managementGroups/CFT-Sandbox
+        - /providers/Microsoft.Management/managementGroups/Platform-Prod
