Adding a new github specific app for use in actions to push and pull from ACR to replace stored secrets

--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -131,3 +131,95 @@
         - /subscriptions/96c274ce-846d-4e48-89a7-d528432298a7 # DCD-CFTAPPS-STG
         - /subscriptions/8cbc6f36-7c56-4963-9d36-739db5d00b27 # DCD-CFTAPPS-PROD
         - /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c # DTS-SHAREDSERVICES-PROD
+- name: GitHub Actions ACR Image Publisher
+  subjects:
+    - 'repo:hmcts/azure-cftapps-monitoring:ref:refs/heads/master'
+    - 'repo:hmcts/azure-cftapps-monitoring:pull_request'
+    - 'repo:hmcts/expressjs-monorepo-template:ref:refs/heads/master'
+    - 'repo:hmcts/expressjs-monorepo-template:pull_request'
+    - 'repo:hmcts/justicetranscribe-web:ref:refs/heads/master'
+    - 'repo:hmcts/justicetranscribe-web:pull_request'
+    - 'repo:hmcts/justicetranscribe-frontend:ref:refs/heads/master'
+    - 'repo:hmcts/justicetranscribe-frontend:pull_request'
+    - 'repo:hmcts/.github:ref:refs/heads/master'
+    - 'repo:hmcts/.github:pull_request'
+    - 'repo:hmcts/cnp-githubactions-library:ref:refs/heads/main'
+    - 'repo:hmcts/cnp-githubactions-library:pull_request'
+    - 'repo:hmcts/slack-help-bot:ref:refs/heads/main'
+    - 'repo:hmcts/slack-help-bot:pull_request'
+    - 'repo:hmcts/zap-glue:ref:refs/heads/master'
+    - 'repo:hmcts/zap-glue:pull_request'
+    - 'repo:hmcts/clamav-mirror:ref:refs/heads/master'
+    - 'repo:hmcts/clamav-mirror:pull_request'
+    - 'repo:hmcts/em-slack-help-bot:ref:refs/heads/master'
+    - 'repo:hmcts/em-slack-help-bot:pull_request'
+    - 'repo:hmcts/github-self-hosted-runner:ref:refs/heads/main'
+    - 'repo:hmcts/github-self-hosted-runner:pull_request'
+    - 'repo:hmcts/jenkins-webhook-relay:ref:refs/heads/master'
+    - 'repo:hmcts/jenkins-webhook-relay:pull_request'
+    - 'repo:hmcts/cs-slack-help-bot:ref:refs/heads/main'
+    - 'repo:hmcts/cs-slack-help-bot:pull_request'
+    - 'repo:hmcts/backstage-portal:ref:refs/heads/master'
+    - 'repo:hmcts/backstage-portal:pull_request'
+    - 'repo:hmcts/incident-response-api:ref:refs/heads/master'
+    - 'repo:hmcts/incident-response-api:pull_request'
+    - 'repo:hmcts/rse-idam-simulator:ref:refs/heads/master'
+    - 'repo:hmcts/rse-idam-simulator:pull_request'
+    - 'repo:hmcts/cnp-java-base:ref:refs/heads/master'
+    - 'repo:hmcts/cnp-java-base:pull_request'
+    - 'repo:hmcts/cnp-jenkins-docker:ref:refs/heads/master'
+    - 'repo:hmcts/cnp-jenkins-docker:pull_request'
+    - 'repo:hmcts/fact-slack-help-bot:ref:refs/heads/master'
+    - 'repo:hmcts/fact-slack-help-bot:pull_request'
+    - 'repo:hmcts/devextreme-poc-spa:ref:refs/heads/main'
+    - 'repo:hmcts/devextreme-poc-spa:pull_request'
+    - 'repo:hmcts/telerik-poc-spa:ref:refs/heads/main'
+    - 'repo:hmcts/telerik-poc-spa:pull_request'
+    - 'repo:hmcts/devextreme-poc-ssr:ref:refs/heads/main'
+    - 'repo:hmcts/devextreme-poc-ssr:pull_request'
+    - 'repo:hmcts/mssql-backup-converter:ref:refs/heads/main'
+    - 'repo:hmcts/mssql-backup-converter:pull_request'
+    - 'repo:hmcts/libragob-batch-jobs:ref:refs/heads/main'
+    - 'repo:hmcts/libragob-batch-jobs:pull_request'
+    - 'repo:hmcts/tfplan-viewer:ref:refs/heads/main'
+    - 'repo:hmcts/tfplan-viewer:pull_request'
+    - 'repo:hmcts/wa-slack-help-bot:ref:refs/heads/main'
+    - 'repo:hmcts/wa-slack-help-bot:pull_request'
+    - 'repo:hmcts/azure-devops-agent:ref:refs/heads/main'
+    - 'repo:hmcts/azure-devops-agent:pull_request'
+    - 'repo:hmcts/rd-slack-help-bot:ref:refs/heads/master'
+    - 'repo:hmcts/rd-slack-help-bot:pull_request'
+    - 'repo:hmcts/POFCC-slack-help-bot:ref:refs/heads/master'
+    - 'repo:hmcts/POFCC-slack-help-bot:pull_request'
+    - 'repo:hmcts/ccd-definition-processor:ref:refs/heads/master'
+    - 'repo:hmcts/ccd-definition-processor:pull_request'
+    - 'repo:hmcts/cnp-node-base:ref:refs/heads/master'
+    - 'repo:hmcts/cnp-node-base:pull_request'
+    - 'repo:hmcts/am-slack-help-bot:ref:refs/heads/main'
+    - 'repo:hmcts/am-slack-help-bot:pull_request'
+    - 'repo:hmcts/terraform-utils:ref:refs/heads/master'
+    - 'repo:hmcts/terraform-utils:pull_request'
+    - 'repo:hmcts/idam-slack-help-bot:ref:refs/heads/master'
+    - 'repo:hmcts/idam-slack-help-bot:pull_request'
+    - 'repo:hmcts/incident-response-frontend:ref:refs/heads/master'
+    - 'repo:hmcts/incident-response-frontend:pull_request'
+    - 'repo:hmcts/telerik-poc-ssr:ref:refs/heads/main'
+    - 'repo:hmcts/telerik-poc-ssr:pull_request'
+    - 'repo:hmcts/ccpay-slack-help-bot:ref:refs/heads/main'
+    - 'repo:hmcts/ccpay-slack-help-bot:pull_request'
+    - 'repo:hmcts/cot-slack-help-bot:ref:refs/heads/main'
+    - 'repo:hmcts/cot-slack-help-bot:pull_request'
+    - 'repo:hmcts/exui-slack-help-bot:ref:refs/heads/main'
+    - 'repo:hmcts/exui-slack-help-bot:pull_request'
+    - 'repo:hmcts/ccd-slack-help-bot:ref:refs/heads/master'
+    - 'repo:hmcts/ccd-slack-help-bot:pull_request'
+  permissions:
+    - role_definition_name: 'AcrPush'
+      scopes:
+        - /subscriptions/8999dec3-0104-4a27-94ee-6588559729d1/resourceGroups/rpe-acr-prod-rg # DCD-CNP-Prod
+        - /subscriptions/bf308a5c-0624-4334-8ff8-8dca9fd43783/resourceGroups/cnp-acr-rg # DCD-CFT-Sandbox
+    - role_definition_name: 'AcrPull'
+      scopes:
+        - /subscriptions/8999dec3-0104-4a27-94ee-6588559729d1/resourceGroups/rpe-acr-prod-rg # DCD-CNP-Prod
+        - /subscriptions/bf308a5c-0624-4334-8ff8-8dca9fd43783/resourceGroups/cnp-acr-rg # DCD-CFT-Sandbox
+
