--- a/app-registrations.yaml
+++ b/app-registrations.yaml
@@ -131,6 +131,13 @@
         - /subscriptions/96c274ce-846d-4e48-89a7-d528432298a7 # DCD-CFTAPPS-STG
         - /subscriptions/8cbc6f36-7c56-4963-9d36-739db5d00b27 # DCD-CFTAPPS-PROD
         - /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c # DTS-SHAREDSERVICES-PROD
+
+########################################################################################
+## The below App Registrations have been created for use in GitHub Actions workflows
+## Please check the readme in this folder before making any changes to these as there
+## are known limitations
+########################################################################################
+
 - name: DTS Platform Operations GitHub Actions ACR Publisher
   subjects:
     - 'repo:hmcts/azure-cftapps-monitoring:ref:refs/heads/master'
@@ -266,3 +273,4 @@
       scopes:
         - /subscriptions/8999dec3-0104-4a27-94ee-6588559729d1/resourceGroups/rpe-acr-prod-rg # DCD-CNP-Prod
         - /subscriptions/bf308a5c-0624-4334-8ff8-8dca9fd43783/resourceGroups/cnp-acr-rg # DCD-CFT-Sandbox
+###########################################################################################################
